# BCE_Numerical_Stability_Explorations

./: .gitignore  OBSERVATIONS_V2.md  OBSERVATIONS_V3.md  README.md  experiment.ipynb  experiment.py  experiment_v2.py  proper_init_comparison.py  pyproject.toml  raschka_reproduction.ipynb  vgg16_bce_investigation.py  vgg16_investigation_results.json
01_shallow_networks/: OBSERVATIONS_V1.md  experiment.ipynb  experiment.py  experiment_v2.py
02_deep_networks/: OBSERVATIONS.md  RASCHKA_REPRODUCTION.md  proper_init_comparison.py  raschka_reproduction.ipynb  vgg16_bce_investigation.py
docs/: bceloss.md  bcewithlogitsloss.md  sigmoid.md
runs/ratio0.1_wd0.001_seed1337_BCE/: events.out.tfevents.1767232274.Amans-MacBook-Pro.local.15102.3
runs/ratio0.1_wd0.001_seed1337_BCEWithLogits/: events.out.tfevents.1767232238.Amans-MacBook-Pro.local.15102.2
runs/ratio0.1_wd0.001_seed42_BCEWithLogits/: events.out.tfevents.1767232175.Amans-MacBook-Pro.local.15106.0
runs/ratio0.1_wd0.001_seed456_BCE/: events.out.tfevents.1767232209.Amans-MacBook-Pro.local.15109.1
runs/ratio0.1_wd0.001_seed789_BCEWithLogits/: events.out.tfevents.1767232238.Amans-MacBook-Pro.local.15104.2
runs/ratio0.1_wd0.01_seed123_BCEWithLogits/: events.out.tfevents.1767232238.Amans-MacBook-Pro.local.15105.2
runs/ratio0.1_wd0.01_seed1337_BCE/: events.out.tfevents.1767232276.Amans-MacBook-Pro.local.15107.3
runs/ratio0.1_wd0.01_seed1337_BCEWithLogits/: events.out.tfevents.1767232242.Amans-MacBook-Pro.local.15107.2
runs/ratio0.1_wd0.0_seed42_BCE/: events.out.tfevents.1767232207.Amans-MacBook-Pro.local.15103.1
(+1799 files in other folders)
